# vamp

./: pyproject.toml
cricket/: .dockerignore  .gitignore  CMakeLists.txt  CppADCodeGen.patch  Dockerfile  LICENSE.txt  README.md  environment.yaml
cricket/.github/workflows/: docker-build.yml
cricket/resources/: baxter.json  baxter_rust.json  fetch.json  fetch_rust.json  fr3.json  iiwa.json  motoman.json  panda.json  panda_rust.json  pr2.json  pr2_rust.json  ur10e.json  ur10e_rust.json  ur5.json  ur5_rust.json
cricket/resources/iiwa/: iiwa.srdf  iiwa_spherized.urdf
cricket/resources/motoman/: motoman.srdf  motoman.urdf  motoman_spherized.urdf
cricket/resources/pr2/: pr2.urdf  pr2_simple.srdf  pr2_simple.urdf  pr2_spherized.urdf
cricket/resources/templates/: ccfk_template.hh  ccfk_template.rs  fk_template.hh  fk_template.rs
cricket/resources/ur10e/: ur10e.urdf  ur_10e_spherized.urdf
cricket/resources/ur5/: ur5.srdf  ur5_spherized_no_offset.urdf
cricket/src/: fkcc_gen.cc  lang_cpp.hh  lang_rust.hh
resources/iiwa/: iiwa_spherized.urdf  iiwa_spherized.xml
scripts/: iiwa_sphere_plan copy.py  iiwa_sphere_plan.py  visualize_iiwa_viser.py
src/impl/vamp/robots/: iiwa.hh
src/vamp/: constants.py
